# Cli-Kit

./: .gitignore  CMakeLists.txt  Documentation.md  Doxyfile  README.md  ansi_lib.h  cli_kit.h
.cache/clangd/index/: menu.cpp.A3E3264C204982FD.idx  menu_utils.cpp.5B8BA8E00AA7D53F.idx  text.cpp.CE5A0817D276706B.idx
AnsiTextLibrary/: CMakeLists.txt
AnsiTextLibrary/src/: ansi_lib.hpp  main.cpp
AnsiTextLibrary/src/menu/: menu.cpp  menu.hpp  menu_utils.cpp
docs/html/: animations_8h_source.html  annotated.html  classCliKit_1_1Text-members.html  classCliKit_1_1Text.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.html  menu_8h_source.html  menu__utils_8h_source.html  sound_8h_source.html  text_8h_source.html
docs/html/search/: all_0.js  classes_0.js
docs/xml/: animations_8h.xml  classCliKit_1_1Text.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  main_8cpp.xml  menu_8h.xml  menu__utils_8h.xml  namespaceCliKit.xml  namespaceCliKit_1_1Animations.xml  namespaceCliKit_1_1Menu.xml  namespaceCliKit_1_1Sound.xml  namespacestd.xml  sound_8h.xml  text_8h.xml
include/: animations.h  files.h  menu.h  menu_utils.h  sound.h  text.h
src/: main.cpp
src/animations/: animations.cpp
src/files/: files.cpp
src/include/: menu_utils.h  text.h
src/menu/: menu.cpp  menu_utils.cpp
src/sound/: sound.cpp
src/text/: text.cpp
